--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,12 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    - name: Rodar Testes
+    - name: Verificar versão do pytest
       run: |
         pytest --version
+
+    - name: Rodar Testes
+      run: |
         pytest
 
     - name: Construir Imagem Docker
